parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_PTR_LEVEL: TM_MUL
    3             | TM_MUL NT_PTR_LEVEL

    4 NT_INIT_LIST: TM_LEFT_BRACE NT_EXPR_LIST TM_RIGHT_BRACE

    5 NT_EXPR_LIST: /* empty */
    6             | NT_EXPR
    7             | NT_EXPR_LIST TM_COMMA NT_EXPR
    8             | NT_INIT_LIST
    9             | NT_EXPR_LIST TM_COMMA NT_INIT_LIST

   10 NT_INIT_CHAR_LIST: TM_LEFT_BRACE NT_CHAR_LIST TM_RIGHT_BRACE

   11 NT_CHAR_LIST: TM_SINGLE_CHAR
   12             | NT_CHAR_LIST TM_COMMA TM_SINGLE_CHAR

   13 NT_MULTI_ARR_SIZES: TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   14                   | NT_MULTI_ARR_SIZES TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET

   15 NT_VAR_DECL: TM_IDENT
   16            | TM_IDENT TM_ASGNOP NT_EXPR
   17            | TM_IDENT NT_MULTI_ARR_SIZES
   18            | TM_IDENT NT_MULTI_ARR_SIZES TM_ASGNOP NT_INIT_LIST
   19            | NT_PTR_LEVEL TM_IDENT

   20 NT_VAR_LIST: NT_VAR_DECL
   21            | NT_VAR_LIST TM_COMMA NT_VAR_DECL

   22 NT_CMD: NT_EXPR TM_ASGNOP NT_EXPR
   23       | NT_CMD TM_SEMICOL NT_CMD
   24       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   25       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   26       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   27       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   28       | TM_VAR NT_PTR_LEVEL TM_IDENT TM_ASGNOP TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   29       | TM_CHAR TM_IDENT
   30       | TM_CHAR TM_IDENT TM_ASGNOP TM_SINGLE_CHAR
   31       | TM_CHAR TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   32       | TM_CHAR TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET TM_ASGNOP TM_STRING
   33       | TM_CHAR TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET TM_ASGNOP NT_INIT_CHAR_LIST
   34       | TM_VAR NT_VAR_LIST

   35 NT_EXPR_2: TM_NAT
   36          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   37          | TM_IDENT
   38          | TM_SINGLE_CHAR
   39          | TM_STRING
   40          | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   41          | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN
   42          | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   43          | TM_NOT NT_EXPR_2
   44          | TM_MINUS NT_EXPR_2
   45          | TM_MUL NT_EXPR_2
   46          | NT_EXPR_2 TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET

   47 NT_EXPR: NT_EXPR_2
   48        | NT_EXPR TM_MUL NT_EXPR
   49        | NT_EXPR TM_PLUS NT_EXPR
   50        | NT_EXPR TM_MINUS NT_EXPR
   51        | NT_EXPR TM_DIV NT_EXPR
   52        | NT_EXPR TM_MOD NT_EXPR
   53        | NT_EXPR TM_LT NT_EXPR
   54        | NT_EXPR TM_GT NT_EXPR
   55        | NT_EXPR TM_LE NT_EXPR
   56        | NT_EXPR TM_GE NT_EXPR
   57        | NT_EXPR TM_EQ NT_EXPR
   58        | NT_EXPR TM_NE NT_EXPR
   59        | NT_EXPR TM_AND NT_EXPR
   60        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 35
TM_IDENT (259) 15 16 17 18 19 28 29 30 31 32 33 37
TM_LEFT_BRACE (260) 4 10 24 25
TM_RIGHT_BRACE (261) 4 10 24 25
TM_LEFT_BRACKET (262) 13 14 31 32 33 46
TM_RIGHT_BRACKET (263) 13 14 31 32 33 46
TM_LEFT_PAREN (264) 26 27 28 36 40 41 42
TM_RIGHT_PAREN (265) 26 27 28 36 40 41 42
TM_SEMICOL (266) 23
TM_COMMA (267) 7 9 12 21
TM_MALLOC (268) 28 42
TM_RI (269) 40
TM_RC (270) 41
TM_WI (271) 26
TM_WC (272) 27
TM_VAR (273) 28 34
TM_IF (274) 24
TM_THEN (275) 24
TM_ELSE (276) 24
TM_WHILE (277) 25
TM_DO (278) 25
TM_CHAR (279) 29 30 31 32 33
TM_ASGNOP (280) 16 18 22 28 30 32 33
TM_OR (281) 60
TM_AND (282) 59
TM_NOT (283) 43
TM_LT (284) 53
TM_LE (285) 55
TM_GT (286) 54
TM_GE (287) 56
TM_EQ (288) 57
TM_NE (289) 58
TM_PLUS (290) 49
TM_MINUS (291) 44 50
TM_MUL (292) 2 3 45 48
TM_DIV (293) 51
TM_MOD (294) 52
TM_SINGLE_CHAR (295) 11 12 30 38
TM_STRING (296) 32 39


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
NT_WHOLE (43)
    on left: 1, on right: 0
NT_PTR_LEVEL (44)
    on left: 2 3, on right: 3 19 28
NT_INIT_LIST (45)
    on left: 4, on right: 8 9 18
NT_EXPR_LIST (46)
    on left: 5 6 7 8 9, on right: 4 7 9
NT_INIT_CHAR_LIST (47)
    on left: 10, on right: 33
NT_CHAR_LIST (48)
    on left: 11 12, on right: 10 12
NT_MULTI_ARR_SIZES (49)
    on left: 13 14, on right: 14 17 18
NT_VAR_DECL (50)
    on left: 15 16 17 18 19, on right: 20 21
NT_VAR_LIST (51)
    on left: 20 21, on right: 21 34
NT_CMD (52)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34, on right: 1 23
    24 25
NT_EXPR_2 (53)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46, on right: 43 44 45
    46 47
NT_EXPR (54)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60, on right: 6
    7 13 14 16 22 24 25 26 27 28 31 32 33 36 42 46 48 49 50 51 52 53
    54 55 56 57 58 59 60


State 0

    0 $accept: . NT_WHOLE $end

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_WI           shift, and go to state 7
    TM_WC           shift, and go to state 8
    TM_VAR          shift, and go to state 9
    TM_IF           shift, and go to state 10
    TM_WHILE        shift, and go to state 11
    TM_CHAR         shift, and go to state 12
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_WHOLE   go to state 18
    NT_CMD     go to state 19
    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 21


State 1

   35 NT_EXPR_2: TM_NAT .

    $default  reduce using rule 35 (NT_EXPR_2)


State 2

   37 NT_EXPR_2: TM_IDENT .

    $default  reduce using rule 37 (NT_EXPR_2)


State 3

   36 NT_EXPR_2: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 22


State 4

   42 NT_EXPR_2: TM_MALLOC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 23


State 5

   40 NT_EXPR_2: TM_RI . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 24


State 6

   41 NT_EXPR_2: TM_RC . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 25


State 7

   26 NT_CMD: TM_WI . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 26


State 8

   27 NT_CMD: TM_WC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 27


State 9

   28 NT_CMD: TM_VAR . NT_PTR_LEVEL TM_IDENT TM_ASGNOP TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   34       | TM_VAR . NT_VAR_LIST

    TM_IDENT  shift, and go to state 28
    TM_MUL    shift, and go to state 29

    NT_PTR_LEVEL  go to state 30
    NT_VAR_DECL   go to state 31
    NT_VAR_LIST   go to state 32


State 10

   24 NT_CMD: TM_IF . NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 33


State 11

   25 NT_CMD: TM_WHILE . NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 34


State 12

   29 NT_CMD: TM_CHAR . TM_IDENT
   30       | TM_CHAR . TM_IDENT TM_ASGNOP TM_SINGLE_CHAR
   31       | TM_CHAR . TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   32       | TM_CHAR . TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET TM_ASGNOP TM_STRING
   33       | TM_CHAR . TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET TM_ASGNOP NT_INIT_CHAR_LIST

    TM_IDENT  shift, and go to state 35


State 13

   43 NT_EXPR_2: TM_NOT . NT_EXPR_2

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 36


State 14

   44 NT_EXPR_2: TM_MINUS . NT_EXPR_2

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 37


State 15

   45 NT_EXPR_2: TM_MUL . NT_EXPR_2

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 38


State 16

   38 NT_EXPR_2: TM_SINGLE_CHAR .

    $default  reduce using rule 38 (NT_EXPR_2)


State 17

   39 NT_EXPR_2: TM_STRING .

    $default  reduce using rule 39 (NT_EXPR_2)


State 18

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 39


State 19

    1 NT_WHOLE: NT_CMD .
   23 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 40

    $default  reduce using rule 1 (NT_WHOLE)


State 20

   46 NT_EXPR_2: NT_EXPR_2 . TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   47 NT_EXPR: NT_EXPR_2 .

    TM_LEFT_BRACKET  shift, and go to state 41

    $default  reduce using rule 47 (NT_EXPR)


State 21

   22 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   48 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   49        | NT_EXPR . TM_PLUS NT_EXPR
   50        | NT_EXPR . TM_MINUS NT_EXPR
   51        | NT_EXPR . TM_DIV NT_EXPR
   52        | NT_EXPR . TM_MOD NT_EXPR
   53        | NT_EXPR . TM_LT NT_EXPR
   54        | NT_EXPR . TM_GT NT_EXPR
   55        | NT_EXPR . TM_LE NT_EXPR
   56        | NT_EXPR . TM_GE NT_EXPR
   57        | NT_EXPR . TM_EQ NT_EXPR
   58        | NT_EXPR . TM_NE NT_EXPR
   59        | NT_EXPR . TM_AND NT_EXPR
   60        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 42
    TM_OR      shift, and go to state 43
    TM_AND     shift, and go to state 44
    TM_LT      shift, and go to state 45
    TM_LE      shift, and go to state 46
    TM_GT      shift, and go to state 47
    TM_GE      shift, and go to state 48
    TM_EQ      shift, and go to state 49
    TM_NE      shift, and go to state 50
    TM_PLUS    shift, and go to state 51
    TM_MINUS   shift, and go to state 52
    TM_MUL     shift, and go to state 53
    TM_DIV     shift, and go to state 54
    TM_MOD     shift, and go to state 55


State 22

   36 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   48 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   49        | NT_EXPR . TM_PLUS NT_EXPR
   50        | NT_EXPR . TM_MINUS NT_EXPR
   51        | NT_EXPR . TM_DIV NT_EXPR
   52        | NT_EXPR . TM_MOD NT_EXPR
   53        | NT_EXPR . TM_LT NT_EXPR
   54        | NT_EXPR . TM_GT NT_EXPR
   55        | NT_EXPR . TM_LE NT_EXPR
   56        | NT_EXPR . TM_GE NT_EXPR
   57        | NT_EXPR . TM_EQ NT_EXPR
   58        | NT_EXPR . TM_NE NT_EXPR
   59        | NT_EXPR . TM_AND NT_EXPR
   60        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 56
    TM_OR           shift, and go to state 43
    TM_AND          shift, and go to state 44
    TM_LT           shift, and go to state 45
    TM_LE           shift, and go to state 46
    TM_GT           shift, and go to state 47
    TM_GE           shift, and go to state 48
    TM_EQ           shift, and go to state 49
    TM_NE           shift, and go to state 50
    TM_PLUS         shift, and go to state 51
    TM_MINUS        shift, and go to state 52
    TM_MUL          shift, and go to state 53
    TM_DIV          shift, and go to state 54
    TM_MOD          shift, and go to state 55


State 23

   42 NT_EXPR_2: TM_MALLOC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 57


State 24

   40 NT_EXPR_2: TM_RI TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 58


State 25

   41 NT_EXPR_2: TM_RC TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 59


State 26

   26 NT_CMD: TM_WI TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 60


State 27

   27 NT_CMD: TM_WC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT          shift, and go to state 1
    TM_IDENT        shift, and go to state 2
    TM_LEFT_PAREN   shift, and go to state 3
    TM_MALLOC       shift, and go to state 4
    TM_RI           shift, and go to state 5
    TM_RC           shift, and go to state 6
    TM_NOT          shift, and go to state 13
    TM_MINUS        shift, and go to state 14
    TM_MUL          shift, and go to state 15
    TM_SINGLE_CHAR  shift, and go to state 16
    TM_STRING       shift, and go to state 17

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 61


State 28

   15 NT_VAR_DECL: TM_IDENT .
   16            | TM_IDENT . TM_ASGNOP NT_EXPR
   17            | TM_IDENT . NT_MULTI_ARR_SIZES
   18            | TM_IDENT . NT_MULTI_ARR_SIZES TM_ASGNOP NT_INIT_LIST

    TM_LEFT_BRACKET  shift, and go to state 62
    TM_ASGNOP        shift, and go to state 63

    $default  reduce using rule 15 (NT_VAR_DECL)

    NT_MULTI_ARR_SIZES  go to state 64


State 29

    2 NT_PTR_LEVEL: TM_MUL .
    3             | TM_MUL . NT_PTR_LEVEL

    TM_MUL  shift, and go to state 29
